rustdocs/errors/rust-bitcoin-units-src-locktime-absolute-mod.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:5:5
  |
5 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:8:5
  |
8 | use internals::error::InputString;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
 --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:9:1
  |
9 + extern crate internals;
  |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:6:5
  |
6 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
   --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:168:13
    |
168 |         use core::num::IntErrorKind;
    |             ^^^^
    |             |
    |             you might be missing crate `core`
    |             help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::parse_int`
  --> ../rust-bitcoin/units/src/locktime/absolute/error.rs:13:12
   |
13 | use crate::parse_int::ParseIntError;
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `parse_int`
   |
help: you might be missing a crate named `parse_int`, add it to your project and import it in your code
  --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:9:1
   |
 9 + extern crate parse_int;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:15:5
   |
15 | use internals::error::InputString;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 9 + extern crate internals;
   |

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:11:5
   |
11 | use core::fmt;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::absolute`
  --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:19:5
   |
19 | use crate::absolute;
   |     ^^^^^^^^^^^^^^^ no `absolute` in the root

error[E0432]: unresolved import `crate::parse_int`
  --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:20:24
   |
20 | use crate::parse_int::{self, PrefixedHexError, UnprefixedHexError};
   |            ---------   ^^^^ no `parse_int` in the root
   |            |
   |            help: a similar name exists in the module: `parse_hex`

error[E0425]: cannot find type `BlockTime` in the crate root
   --> ../rust-bitcoin/units/src/locktime/absolute/mod.rs:635:36
    |
 78 | pub enum LockTime {
    | ----------------- similarly named enum `LockTime` defined here
...
635 |     pub fn new(timestamps: [crate::BlockTime; 11]) -> Result<Self, Conv...
    |                                    ^^^^^^^^^
    |
help: an enum with a similar name exists
    |
635 -     pub fn new(timestamps: [crate::BlockTime; 11]) -> Result<Self, ConversionError> {
635 +     pub fn new(timestamps: [crate::LockTime; 11]) -> Result<Self, ConversionError> {
    |

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
